Few more spacing fixes on home page

--- a/web/app/themes/estyn/resources/styles/app.scss
+++ b/web/app/themes/estyn/resources/styles/app.scss
@@ -1201,7 +1201,7 @@ p.sp-desc {
 .ctaArcMapBGFiller {
     top: 38%;
     z-index: -1;
-    height: 500px;
+    height: 481px;
 
     @include media-breakpoint-down(md) {
         top: 33%;
